--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="navegador">
             <input type="checkbox" id="toggle" />
             <label for="toggle" class="menu">
-            <i class="fas fa-bars"></i>
+            <span class="fas fa-bars">☰</span>
             </label>
               <ul id="main-menu">
                 <li><a href="#">EPISODIOS</a></li>
